
    HADOOP-12570. HDFS Secure Mode Documentation updates.
    (Arpit Agarwal via cnauroth)

    HADOOP-12686. Update FileSystemShell documentation to mention the meaning
    of each columns of fs -du. (Daisuke Kobayashi via aajisaka)

    HADOOP-12658. Clear javadoc and check style issues around DomainSocket
    (Kai Zheng via umamahesh)

    HADOOP-12604. Exception may be swallowed in KMSClientProvider.
    (Yongjun Zhang)

    HADOOP-12696. Add tests for S3Filesystem Contract (Matt Paduano via raviprak)

    HADOOP-12755. Fix typo in defaultFS warning message. (wang)

    HADOOP-12292. Make use of DeleteObjects optional.
    (Thomas Demoor via stevel)

    HADOOP-12759. RollingFileSystemSink should eagerly rotate directories.
    (Daniel Templeton via wang)

    HADOOP-12752. Improve diagnostics/use of envvar/sysprop credential
    propagation (Steve Loughran via cnauroth)

    HADOOP-12788. OpensslAesCtrCryptoCodec should log which random number generator is used.
    (Wei-Chiu Chuang via umamahesh)

    HADOOP-12764. Increase default value of KMS maxHttpHeaderSize and make it
    configurable. (zhz)

    HADOOP-12699. TestKMS#testKMSProvider intermittently fails during
    'test rollover draining'. (Xiao Chen via wang)

    HADOOP-12776. Remove getaclstatus call for non-acl commands in getfacl.
    (Brahma Reddy Battula via vinayakumarb)

    HADOOP-11031. Design Document for Credential Provider API.
    (Larry McCay via cnauroth)

    HADOOP-12828. Print user when services are started.
    (Wei-Chiu Chuang via Yongjun Zhang) 

    HADOOP-11613. Remove commons-httpclient dependency from hadoop-azure.
    (Masatake Iwasaki via cnauroth) 

    HADOOP-12668. Support excluding weak Ciphers in HttpServer2 through
    ssl-server.conf. (Vijay Singh via zhz)

    HADOOP-12555. WASB to read credentials from a credential provider.
    (Larry McCay via cnauroth)

    HADOOP-12535. Run FileSystem contract tests with hadoop-azure.
    (Madhumita Chakraborty via cnauroth)
